sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value i
     i = 0;
     ^AlgCombSort:10: error: not found: value i
	while (i+écart <= taille) {
               ^AlgCombSort:11: error: not found: value i
		if ( plusPetit(i,i+écart) == false) {
                               ^AlgCombSort:12: error: not found: value i
			echange(i,i+écart);
                                ^AlgCombSort:15: error: not found: value i
		i += 1;
                ^